Update to Vaadin 23.3.12
- update dependencies
- rework dependency management
- code adjustments